--- a/index.html
+++ b/index.html
@@ -34,22 +34,33 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            
+        <main> 
             <div class="main-wrapp">
-            <h1><span> Lorem Ipsum Dolor</span></h1>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione fuga alias nobis! </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione fuga alias nobis!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione fuga alias nobis!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione fuga alias nobis!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione fuga alias nobis!</p>
+                <h1><span> Lorem Ipsum Dolor</span></h1>
+                <article class="article-wrapper highlighted">
+                    <h2>Loreem Ipsum!</h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. 
+                        Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione
+                        fuga alias nobis! 
+                    <div> <img src="./images/stockvault-man-holding-recycle-bin255172.png" alt="Man-holding-recycle" /></div></p>
+                </article>
+                <article class="article-wrapper highlighted">
+                    <h2>Loreem Ipsum!</h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. 
+                        Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione
+                        fuga alias nobis! 
+                    <div> <img src="./images/stockvault-man-holding-recycle-bin255172.png" alt="Man-holding-recycle" /></div></p>
+                </article>
+            </div>
+            <div class="sticky"><a href="#top" aria-label="Oldal tetejére">🠉</a></div>
         </div>
-        <div class="sticky"><a href="#top">🠉</a></div>
         </main>
     
         <footer>
             <div class="left">&copy; Pfeiffer Zoltan 2020 
-                <p>
+                                <p>
                     <a href="http://jigsaw.w3.org/css-validator/check/referer">
                         <img style="border:0;width:88px;height:31px"
                             src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
