--- a/what.html
+++ b/what.html
@@ -15,7 +15,7 @@
                 <ul class="small-menu">
                     <li class="menu"><a href=""> Menü ⮇</a>
                         <ul class="submenu">
-                            <li><a href="./index.html"> Főoldal</a>
+                            <li><a href="./index.html" aria-label="Főoldal"> Főoldal</a>
                             <li><a href="#"> Mit?</a></li>
                             <li><a href=""> Hol?</a></li>
                             <li><a href=""> Vesélyes hulladék</a></li>
@@ -26,7 +26,7 @@
                 </ul>
                 <!--Nagy Mneu 900px-tol-->
                 <ul class="big-menu">
-                    <li><a href="./index.html"> Főoldal</a></li>
+                    <li><a href="./index.html" aria-label="Főoldal"> Főoldal</a></li>
                     <li><a href="#"> Mit?</a></li>
                     <li><a href=""> Hol?</a></li>
                     <li><a href=""> Vesélyes hulladék</a></li>
@@ -61,21 +61,16 @@
             <div class="sticky"><a href="#top" aria-label="Oldal tetejére">🠉</a></div>
         </main>
         <footer>
-            <div class="left">&copy; Pfeiffer Zoltan 2020 
-                                <p>
-                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                        <img style="border:0;width:88px;height:31px"
-                            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                            alt="CSS ist valide!" />
-                        </a>
-                    </p>
-            </div>
-            <div class="right">
-
-                <a href="" class="insta"></a>
-                <a href="" class="face"></a>
-            </div>
-        </footer>
+            <span> &copy; Pfeiffer Zoltan 2020 </span>
+             <p class="css-valide">
+                 <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                  <img src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                  alt="CSS ist valide!" />
+                 </a>
+             </p>
+             <a href="" class="insta"></a>
+             <a href="" class="face"></a> 
+         </footer>
     </div>
 </body>
 </html>
