--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./style/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +15,8 @@
                 <ul class="small-menu">
                     <li class="menu"><a href=""> Menü ⮇</a>
                         <ul class="submenu">
-                            <li><a href=""> Főoldal</a>
-                            <li><a href=""> Mit?</a></li>
+                            <li><a href="#" aria-label="Főoldal"> Főoldal</a>
+                            <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
                             <li><a href=""> Hol?</a></li>
                             <li><a href=""> Vesélyes hulladék</a></li>
                             <li><a href=""> Miért?</a></li>
@@ -27,7 +26,7 @@
                 </ul>
                 <!--Nagy Mneu 900px-tol-->
                 <ul class="big-menu">
-                    <li><a href="#"> Főoldal</a></li>
+                    <li><a href="#" aria-label="Főoldal"> Főoldal</a></li>
                     <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
                     <li><a href=""> Hol?</a></li>
                     <li><a href=""> Vesélyes hulladék</a></li>
@@ -87,10 +86,9 @@
         </main>
         <footer>
            <span> &copy; Pfeiffer Zoltan 2020 </span>
-            <p>
+            <p class="css-valide">
                 <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                 <img style="border:0;width:88px;height:31px"
-                 src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                 <img src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                  alt="CSS ist valide!" />
                 </a>
             </p>
