index.html correction
index.html bugs correction
+ sites base ready

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <nav>
                  <!--kis Mneu 900px-ig-->
                 <ul class="small-menu">
-                    <li class="menu"><a href=""> Menü ⮇</a>
+                    <li class="menu"> Menü ⮇
                         <ul class="submenu">
                             <li><a href="#" aria-label="Főoldal"> Főoldal</a>
                             <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
-                            <li><a href=""> Hol?</a></li>
-                            <li><a href=""> Vesélyes hulladék</a></li>
+                            <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
+                            <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
                             <li><a href=""> Miért?</a></li>
                         </ul>
                     </li>
@@ -28,58 +28,77 @@
                 <ul class="big-menu">
                     <li><a href="#" aria-label="Főoldal"> Főoldal</a></li>
                     <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
-                    <li><a href=""> Hol?</a></li>
-                    <li><a href=""> Vesélyes hulladék</a></li>
+                    <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
+                    <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
                     <li><a href=""> Miért?</a></li>
                 </ul>
             </nav>
         </header>
         <main> 
-            <h1><span> Lorem Ipsum Dolor</span></h1>
+            <h1><span> „Gondolkodjon globálisan, cselekedjen lokálisan”</span></h1>
             <!--Main wrapp-->
             <div class="main-wrapp">
                 <!--Article wrapp-->
                 <article class="article-wrapper highlighted">
-                    <h2>Loreem Ipsum!</h2>
+                    <h2>Ne fáradjon, Mi intézzük!</h2>
                     <div class="picture">
                          <img src="./images/stockvault-man-holding-recycle-bin255172.png" 
-                         alt="Újrahasznosító öltönyös ember" /></div>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. 
-                        Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione
-                        fuga alias nobis!
-                    </p>
+                         alt="Újrahasznosító öltönyös ember" />
+                    </div>
+                    <div class="article-content">
+                        <p> -"Nincs nekem erre időm!"</p>
+                        <p>Nekünk van! Önnek csak az a feladata hogy a megfelelő szemetet a megfelelő helyre
+                            tegye, hogy újjászületve ismét hasznosak legyenek. Bízza az önkénteseinkre és figyelje a 
+                            naptárat! 
+                        Helyezze a szemetet a kijelölt helyre!</p>
+                        <p>Nézze meg a naptárat:</p>
+                    </div>
                     <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
                 </article>
                 <!--/Article wrapp-->
                 <!--Article wrapp-->
                 <article class="article-wrapper">
-                    <h2>Loreem Ipsum!</h2>
+                    <h2>Gyűjtse szelektíven!</h2>
                     <div class="picture"> 
                         <img src="./images/recycling-small.png" 
-                        alt="Újrahasznosítható szemét egy vödörben" /></div>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. 
-                        Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione
-                        fuga alias nobis! 
-                    </p>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
+                        alt="Újrahasznosítható szemét egy vödörben" />
+                    </div>
+                    <div class="article-content">
+                        <p> Nem is nehéz!</p>  
+                        <p>Amennyiben a naptári napokon kívül szeretné a szelektív hulladékot elhelyezni keresse fel a 
+                            gyűjtőpontjainkat, és ott ingyen és bérmentve elhelyezheti azokat akár bevásárlás előtt vagy
+                            után is! Idő takarékos és Zöld!</p>
+                        <p>Tudja meg hol keressen minket:</p>
+                    </div>
+                        <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
                 </article>
                 <!--/Article wrapp-->
                 <!--Article wrapp-->
                 <article class="article-wrapper">
-                    <h2>Loreem Ipsum!</h2>
+                    <h2>Gondolkodjon Zölden!</h2>
                     <div class="picture"> 
-                        <img src="./images/recycling-small.png" 
-                        alt="Újrahasznosítható szemét egy vödörben" /></div>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Debitis labore vitae consequatur velit aliquam soluta eaque corrupti eligendi. 
-                        Cupiditate quaerat accusantium natus molestias quo perspiciatis dolore ratione
-                        fuga alias nobis!
-                    </p>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
+                        <img src="./images/think-green.png" 
+                        alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                    </div>
+                    <div class="article-content">
+                        <p> Spóroljon a Földnek!</p>
+                        <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
+                            terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
+                        <p>Hogy legyen hol élni!</p>
+                    </div>
+                        <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
                 </article>
                 <!--/Article wrapp-->
+
+            </div>
+            <div class="more">
+                <ul>
+                    <li>Első oldal</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>Utolsó</li>
+                </ul>
             </div>
              <!--/Main wrapp-->
             <div class="sticky"><a href="#top" aria-label="Oldal tetejére">🠉</a></div>
