--- a/where.html
+++ b/where.html
@@ -11,31 +11,31 @@
         <header>
             <h1>Újrahasznosítás</h1>
             <nav>
-                 <!--kis Mneu 900px-ig-->
-                <ul class="small-menu">
-                    <li class="menu"> Menü ⮇
-                        <ul class="submenu">
-                            <li><a href="./index.html" aria-label="Főoldal"> Főoldal</a>
-                            <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
-                            <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
-                            <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
-                            <li><a href=""> Miért?</a></li>
-                        </ul>
-                    </li>
-                    <li class="site-name">Mit?</li>
-                </ul>
-                <!--Nagy Mneu 900px-tol-->
-                <ul class="big-menu">
-                    <li><a href="./index.html" aria-label="Főoldal"> Főoldal</a></li>
-                    <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
-                    <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
-                    <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
-                    <li><a href=""> Miért?</a></li>
-                </ul>
-            </nav>
+                <!--kis Mneu 900px-ig-->
+               <ul class="small-menu">
+                   <li class="menu"> Menü ⮇
+                       <ul class="submenu">
+                           <li><a href="./index.html" aria-label="Főoldal"> Főoldal</a>
+                           <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
+                           <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
+                           <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
+                           <li><a href=""> Miért?</a></li>
+                       </ul>
+                   </li>
+                   <li class="site-name">Hol?</li>
+               </ul>
+               <!--Nagy Mneu 900px-tol-->
+               <ul class="big-menu">
+                   <li><a href="./index.html" aria-label="Főoldal"> Főoldal</a></li>
+                   <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
+                   <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
+                   <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
+                   <li><a href=""> Miért?</a></li>
+               </ul>
+           </nav>
         </header>
         <main> 
-            <h1><span> „Mit szabad és hogyan?”</span></h1>
+            <h1><span> „De hol tudom ezt megtenni?”</span></h1>
             <!--Main wrapp-->
             <div class="main-wrapp">
                 <!--Article wrapp-->
