--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p> Nem is nehéz!</p>  
                         <p>Amennyiben a naptári napokon kívül szeretné a szelektív hulladékot elhelyezni keresse fel a 
                             gyűjtőpontjainkat, és ott ingyen és bérmentve elhelyezheti azokat akár bevásárlás előtt vagy
-                            után is! Idő takarékos és Zöld!</p>
+                            után is! </p>
                         <p>Tudja meg hol keressen minket:</p>
                     </div>
                         <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
