--- a/what.html
+++ b/what.html
@@ -34,55 +34,133 @@
                 </ul>
             </nav>
         </header>
-        <main> 
-            <h1><span> „Mit szabad és hogyan?”</span></h1>
-            <!--Main wrapp-->
-            <div class="main-wrapp">
-                <!--Article wrapp-->
-                <article class="article-wrapper article-what">
-                    <h2>Komposzt</h2>
-                    <div class="picture">
-                         <img src="./images/stockvault-man-holding-recycle-bin255172.png" 
-                         alt="Újrahasznosító öltönyös ember" /></div>
-                    <p> -"Nincs nekem erre időm!"</p>
-                    <p>Nekünk van! Önnek csak az a feladata hogy a megfelelő szemetet a megfelelő helyre
-                        tegye, hogy újjászületve ismét hasznosak legyenek. Bízza az önkénteseinkre és figyelje a naptárat! 
-                    Helyezze a szemetet a kijelölt helyre!</p>
-                    <p>Nézze meg a naptárat:</p>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
-                </article>
-                <!--/Article wrapp-->
-                <!--Article wrapp-->
-                <article class="article-wrapper">
-                    <h2>Gyűjtse szelektíven!</h2>
-                    <div class="picture"> 
-                        <img src="./images/recycling-small.png" 
-                        alt="Újrahasznosítható szemét egy vödörben" /></div>
-                    <p> Nem is nehéz!</p>  
-                    <p>Amennyiben a naptári napokon kívül szeretné a szelektív hulladékot elhelyezni keresse fel a 
-                        gyűjtőpontjainkat, és ott ingyen és bérmentve elhelyezheti azokat akár bevásárlás előtt vagy
-                        után is! Idő takarékos és Zöld!</p>
-                    <p>Tudja meg hol keressen minket:</p>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
-                </article>
-                <!--/Article wrapp-->
-                <!--Article wrapp-->
-                <article class="article-wrapper">
-                    <h2>Gondolkojon Zölden!</h2>
-                    <div class="picture"> 
-                        <img src="./images/think-green.png" 
-                        alt="Újrahasznosítható szemét egy vödörben" /></div>
-                    <p> Spóroljon a Földnek!</p>
-                    <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
-                        terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
-                    <p>Hogy legyen hol élni!</p>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
-                </article>
-                <!--/Article wrapp-->
-            </div>
-             <!--/Main wrapp-->
-            <div class="sticky"><a href="#top" aria-label="Oldal tetejére">🠉</a></div>
-        </main>
+        <div class="site-container">
+            <main> 
+                <h1><span> „Mit szabad és hogyan?”</span></h1>
+                <!--Main wrapp-->
+                <div class="what-container">
+                    <!--Article wrapp-->
+                    <article  id="komposzt">
+                        <h2>Komposzt</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/think-green.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <p> Spóroljon a Földnek!</p>
+                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
+                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
+                                <p>Hogy legyen hol élni!</p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp-->
+                    <!--Article wrapp-->
+                    <article id="muanyag">
+                        <h2>Műanyag</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/think-green.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <p> Spóroljon a Földnek!</p>
+                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
+                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
+                                <p>Hogy legyen hol élni!</p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp-->
+                    <!--Article wrapp-->
+                    <article id="alu">
+                        <h2>Alumínium</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/think-green.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <p> Spóroljon a Földnek!</p>
+                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
+                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
+                                <p>Hogy legyen hol élni!</p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp-->  
+                    <!--Article wrapp-->
+                    <article id="uveg">
+                        <h2>Üveg</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/think-green.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <p> Spóroljon a Földnek!</p>
+                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
+                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
+                                <p>Hogy legyen hol élni!</p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp-->                    
+                    <!--Article wrapp-->
+                    <article id="papir">
+                        <h2>Papír</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/think-green.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <p> Spóroljon a Földnek!</p>
+                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
+                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
+                                <p>Hogy legyen hol élni!</p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp-->                    
+                    <!--Article wrapp-->
+                    <article id="elektronikai">
+                        <h2>Elektronikai</h2>
+                        <div class="what-wrap">
+                            <div class="picture"> 
+                                <img src="./images/think-green.png" 
+                                alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
+                            </div>
+                            <div class="article-content">
+                                <p> Spóroljon a Földnek!</p>
+                                <p>Önnek nem sok energia, de nagyon sok energiát spórolhat a Föld! Nem is beszélve a környezeti
+                                    terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
+                                <p>Hogy legyen hol élni!</p>
+                            </div>
+                        </div>
+                    </article>
+                    <!--/Article wrapp-->               
+                </div>
+                <!--/Main wrapp-->
+            </main>
+            <aside>
+                <div class="side-menu">
+                    <div class="sticky-menu"> 
+                        <ul>
+                            <li> <a href="#komposzt">Komposzt</a></li>
+                            <li> <a href="#muanyag">Műanyag</a></li>
+                            <li> <a href="#alu">Alumínium</a></li>
+                            <li> <a href="#uveg">Üveg</a></li>
+                            <li> <a href="#papir">Papír</a></li>
+                            <li> <a href="#elektronikai">Elektronikai</a></li>
+                            <li><a href="#top">Oldal teteje</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </aside>
+        </div>
+        <div class="sticky what-sticky"><a href="#top" aria-label="Oldal tetejére">🠉</a></div>
         <footer>
            <span> &copy; Pfeiffer Zoltan 2020 </span>
             <p class="css-valide">
