--- a/what.html
+++ b/what.html
@@ -44,7 +44,7 @@
                         <h2>Komposzt</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/think-green.png" 
+                                <img src="./images/compost.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
@@ -61,7 +61,7 @@
                         <h2>Műanyag</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/think-green.png" 
+                                <img src="./images/plastic-reciciling.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
@@ -78,7 +78,7 @@
                         <h2>Alumínium</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/think-green.png" 
+                                <img src="./images/alu-recicling.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
@@ -95,7 +95,7 @@
                         <h2>Üveg</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/think-green.png" 
+                                <img src="./images/glass.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
@@ -112,7 +112,7 @@
                         <h2>Papír</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/think-green.png" 
+                                <img src="./images/papier-recicling.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
@@ -129,7 +129,7 @@
                         <h2>Elektronikai</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
-                                <img src="./images/think-green.png" 
+                                <img src="./images/electronic-recicling.png" 
                                 alt="Egy ember fej körvonala mely élhető világon gondolkodik" />
                             </div>
                             <div class="article-content">
