--- a/index.html
+++ b/index.html
@@ -13,29 +13,32 @@
     <div class="wrapper">
         <header>
             <h1>Újrahasznosítás</h1>
-            <nav>
-                 <!--kis Mneu 900px-ig-->
-                <ul class="small-menu">
-                    <li class="menu"> Menü ⮇
-                        <ul class="submenu">
-                            <li><a href="#" aria-label="Főoldal"> Főoldal</a>
-                            <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
-                            <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
-                            <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
-                            <li><a href=""> Miért?</a></li>
-                        </ul>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-green">
+                <a class="navbar-brand" href="#">Navigáció</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="index.html" aria-label="Főoldal">Főoldal <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="site-name">Főoldal</li>
-                </ul>
-                <!--Nagy Mneu 900px-tol-->
-                <ul class="big-menu">
-                    <li><a href="#" aria-label="Főoldal"> Főoldal</a></li>
-                    <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
-                    <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
-                    <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
-                    <li><a href=""> Miért?</a></li>
-                </ul>
-            </nav>
+                    <li class="nav-item">
+                      <a class="nav-recycle" href="./what.html" aria-label="Mit és hogyan?" >Mit?</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-recycle" href="./where.html" aria-label="Hol és miként?">Hol?</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-recycle" href="./hazmat.html" aria-label="Veszélyes hulladék">Veszélyes hulladék</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-recycle" href="#" aria-label="kapcsolat">Kapcsolat</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
         </header>
         <main> 
             <h1><span> „Gondolkodjon globálisan, cselekedjen lokálisan”</span></h1>
