Navigation ready on this siten

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html" aria-label="Főoldal">Főoldal <span class="sr-only">(current)</span></a>
+                      <a class="nav-recycle" href="index.html" aria-label="Főoldal">Főoldal <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-recycle" href="./what.html" aria-label="Mit és hogyan?" >Mit?</a>
@@ -107,7 +107,12 @@
                 </ul>
             </div>
              <!--/Main wrapp-->
-            <div class="sticky"><a href="#top" aria-label="Oldal tetejére">🠉</a></div>
+             <div class="sticky what-sticky"><a href="#top" aria-label="Oldal tetejére">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-bar-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M11.354 5.854a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L8 3.207l2.646 2.647a.5.5 0 0 0 .708 0z"/>
+                    <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3a.5.5 0 0 0-1 0v6.5a.5.5 0 0 0 .5.5zm-4.8 1.6c0-.22.18-.4.4-.4h8.8a.4.4 0 0 1 0 .8H3.6a.4.4 0 0 1-.4-.4z"/>
+                  </svg>
+            </a></div>
         </main>
         <footer>
            <span> &copy; Pfeiffer Zoltan 2020 </span>
