--- a/what.html
+++ b/what.html
@@ -13,29 +13,32 @@
     <div class="wrapper">
         <header>
             <h1>Újrahasznosítás</h1>
-            <nav>
-                 <!--kis Mneu 900px-ig-->
-                <ul class="small-menu">
-                    <li class="menu"> Menü ⮇
-                        <ul class="submenu">
-                            <li><a href="./index.html" aria-label="Főoldal"> Főoldal</a>
-                            <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
-                            <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
-                            <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
-                            <li><a href=""> Miért?</a></li>
-                        </ul>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-green">
+                <a class="navbar-brand" href="#">Navigáció</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                     <a class="nav-recycle" href="index.html" aria-label="Főoldal">Főoldal </a>
                     </li>
-                    <li class="site-name">Mit?</li>
-                </ul>
-                <!--Nagy Mneu 900px-tol-->
-                <ul class="big-menu">
-                    <li><a href="./index.html" aria-label="Főoldal"> Főoldal</a></li>
-                    <li><a href="./what.html" aria-label="Mit és hogyan?"> Mit?</a></li>
-                    <li><a href="./where.html" aria-label="Hol és miként?"> Hol?</a></li>
-                    <li><a href="./hazmat.html" aria-label="Veszélyes hulladék"> Vesélyes hulladék</a></li>
-                    <li><a href=""> Miért?</a></li>
-                </ul>
-            </nav>
+                    <li class="nav-item active">
+                      <a class="nav-recycle" href="./what.html" aria-label="Mit és hogyan?" >Mit?<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-recycle" href="./where.html" aria-label="Hol és miként?">Hol?</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-recycle" href="./hazmat.html" aria-label="Veszélyes hulladék">Veszélyes hulladék</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-recycle" href="#" aria-label="kapcsolat">Kapcsolat</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
         </header>
         <div class="site-container">
             <main> 
@@ -163,7 +166,12 @@
                 </div>
             </aside>
         </div>
-        <div class="sticky what-sticky"><a href="#top" aria-label="Oldal tetejére">🠉</a></div>
+        <div class="sticky what-sticky"><a href="#top" aria-label="Oldal tetejére">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-bar-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M11.354 5.854a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L8 3.207l2.646 2.647a.5.5 0 0 0 .708 0z"/>
+                <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3a.5.5 0 0 0-1 0v6.5a.5.5 0 0 0 .5.5zm-4.8 1.6c0-.22.18-.4.4-.4h8.8a.4.4 0 0 1 0 .8H3.6a.4.4 0 0 1-.4-.4z"/>
+              </svg>
+        </a></div>
         <footer>
            <span> &copy; Pfeiffer Zoltan 2020 </span>
             <p class="css-valide">
