--- a/what.html
+++ b/what.html
@@ -28,9 +28,6 @@
                       <a class="nav-recycle" href="./what.html" aria-label="Mit és hogyan?" >Mit?<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-recycle" href="./where.html" aria-label="Hol és miként?">Hol?</a>
-                    </li>
-                    <li class="nav-item">
                       <a class="nav-recycle" href="./hazmat.html" aria-label="Veszélyes hulladék">Veszélyes hulladék</a>
                     </li>
                     <li class="nav-item">
@@ -160,7 +157,11 @@
                             <li> <a href="#uveg">Üveg</a></li>
                             <li> <a href="#papir">Papír</a></li>
                             <li> <a href="#elektronikai">Elektronikai</a></li>
-                            <li><a href="#top">Oldal teteje</a></li>
+                            <li><a href="#top">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm3.354 8.354a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 6.207V11a.5.5 0 0 1-1 0V6.207L5.354 8.354z"/>
+                                  </svg>
+                            </a></li>
                         </ul>
                     </div>
                 </div>
